<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_margin="16dp"
        android:orientation="vertical">

    <TextView
        android:id="@+id/fileName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="18sp"
        android:paddingBottom="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:baselineAligned="false"
        android:id="@+id/imageLinear"
        android:layout_below="@+id/fileName"
        android:layout_weight="1">

        <com.github.chrisbanes.photoview.PhotoView
            android:id="@+id/imageView"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:paddingLeft="4dp"
            android:paddingRight="4dp" />

        <com.github.chrisbanes.photoview.PhotoView
                android:id="@+id/imageView2"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:paddingLeft="4dp"
                android:paddingRight="4dp"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/imageLinear"
        android:paddingTop="10dp"
        android:layout_weight="1">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/rbcCount"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/rbcCount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="number" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/wbcCount"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/wbcCount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="number" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/pltCount"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/pltCount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="number" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/timeElapsed"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/timeElapsed"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="numberDecimal" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/dateCreated"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/dateCreated"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/dateAnalysed"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/dateAnalysed"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10" />

            </LinearLayout>
        </ScrollView>

    </LinearLayout>

</LinearLayout>
    </FrameLayout>