<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container"
    android:layout_margin="16dp"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

        <TextView
            android:id="@+id/developed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/developed"
            android:textStyle="bold"
            android:textSize="18sp"
            android:paddingBottom="10dp"
            android:textAlignment="center"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:baselineAligned="false"
            android:id="@+id/imageLinear"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                app:srcCompat="@drawable/logo"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:id="@+id/teamMembers"
            android:paddingTop="10dp"
            android:layout_weight="1">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/teamMember1"
                        android:textSize="15sp"
                        android:textAlignment="center"
                        android:layout_marginTop="4dp"
                        android:layout_marginBottom="2dp"/>

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/teamMember2"
                        android:textSize="15sp"
                        android:textAlignment="center"
                        android:layout_marginTop="2dp"
                        android:layout_marginBottom="2dp"/>

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/teamMember3"
                        android:textSize="15sp"
                        android:textAlignment="center"
                        android:layout_marginTop="2dp"
                        android:layout_marginBottom="2dp"/>

                    <!--<TextView-->
                        <!--android:id="@+id/textView4"-->
                        <!--android:layout_width="match_parent"-->
                        <!--android:layout_height="wrap_content"-->
                        <!--android:text="@string/teamMember4"-->
                        <!--android:textSize="15sp"-->
                        <!--android:textAlignment="center"-->
                        <!--android:layout_marginTop="2dp"-->
                        <!--android:layout_marginBottom="2dp"/>-->

                    <!--<TextView-->
                        <!--android:id="@+id/textView6"-->
                        <!--android:layout_width="match_parent"-->
                        <!--android:layout_height="wrap_content"-->
                        <!--android:text="@string/teamMember5"-->
                        <!--android:textSize="15sp"-->
                        <!--android:textAlignment="center"-->
                        <!--android:layout_marginTop="2dp"-->
                        <!--android:layout_marginBottom="2dp"/>-->

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/uthm"
                        android:textSize="15sp"
                        android:textAlignment="center"
                        android:gravity="bottom"
                        android:layout_marginTop="15dp"
                        android:layout_marginBottom="4dp"/>

                </LinearLayout>
            </ScrollView>
        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:baselineAligned="false"
        android:id="@+id/imageLinear1"
        android:layout_weight="1.3">

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            app:srcCompat="@drawable/uthm" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            app:srcCompat="@drawable/fkee" />


    </LinearLayout>

</LinearLayout>